[package]
name = "txfs"
version = "0.1.0"
authors = ["code@tinychain.net"]
edition = "2021"
license = "Apache-2.0"
description = "A cached transactional filesystem layer over tokio::fs"
repository = "https://github.com/haydnv/txfs"
readme = "README.md"

categories = ["caching", "data-structures", "filesystem", "memory-management"]
keywords = ["transactional", "file", "io", "cache"]

[features]
logging = ["log", "freqfs/logging"]

[dependencies]
freqfs = { path = "../freqfs" }
futures = "0.3"
get-size = "0.1"
log = { version = "0.4", features = ["release_max_level_info"], optional = true }
safecast = { path = "../safecast" }
txn_lock = { path = "../txn_lock" }
