[package]
name = "txfs"
version = "0.1.0"
authors = ["code@tinychain.net"]
edition = "2021"
license = "Apache-2.0"
description = "A cached transactional filesystem layer over tokio::fs"
repository = "https://github.com/haydnv/txfs"
readme = "README.md"

categories = ["caching", "data-structures", "filesystem", "memory-management"]
keywords = ["transactional", "versioning", "file", "io", "cache"]

[[example]]
name = "example"
required-features = ["stream"]

[features]
all = ["logging", "stream"]
logging = ["log", "freqfs/logging", "txn_lock/logging"]
stream = ["freqfs/stream"]

[dependencies]
freqfs = { path = "../freqfs", features = ["id"] }
futures = "0.3"
get-size = "0.1"
hr-id = "0.4"
log = { version = "0.4", features = ["release_max_level_info"], optional = true }
safecast = "0.2"
txn_lock = { path = "../txn_lock", features = ["all"] }

[dev-dependencies]
destream = "0.7"
rand = "0.8"
tokio = { version = "1.32", features = ["macros"] }
